In the end I gave functionality to the sliders. I was looking at the manifest to update it and gave some basic styles to the information sections

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Nos dedicamos a la venta minorista de productos de diagnóstico para motores, como herramientas de diagnóstico, software de diagnóstico y equipos de prueba para motores. La empresa ofrece productos de alta calidad y tecnología avanzada para ayudar a los mecánicos a diagnosticar y reparar problemas de motor."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
